fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -144,7 +144,7 @@
   "New Application": "Nieuwe applicatie",
   "This version of the document was deleted": "Deze versie van het document is verwijderd",
   "Link copied": "Link gekopieerd",
-  "Download revision": "Download revision",
+  "Download revision": "Download revisie",
   "Dark": "Donker",
   "Light": "Licht",
   "System": "Systeem",
@@ -296,7 +296,7 @@
   "{{userName}} moved": "{{userName}} verplaatst",
   "Your file will be available in {{ location }} soon": "Je bestand is binnenkort beschikbaar op {{ location }}",
   "View": "Bekijk",
-  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "A link to your file will be sent through email soon": "Een link naar je bestand wordt spoedig via e-mail verzonden",
   "Export started": "Exporteren is begonnen",
   "A ZIP file containing the images, and documents in the Markdown format.": "Een Zip-bestand met de afbeeldingen en documenten als Markdown bestanden.",
   "A ZIP file containing the images, and documents as HTML files.": "Een Zip-bestand met de afbeeldingen en documenten als HTML-bestanden.",
