--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -897,8 +897,8 @@
   "Triggers": "Triggers",
   "Mention users and more": "Gebruikers en meer vermelden",
   "Insert block": "Voeg blok in",
-  "Continue with Passkey": "Continue with Passkey",
-  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
+  "Continue with Passkey": "Doorgaan met Passkey",
+  "Passkeys are not supported in the desktop app": "Passkey's worden niet ondersteund in de desktop-app",
   "Sign In": "Aanmelden",
   "Continue with Email": "Verdergaan met e-mailadres",
   "Continue with {{ authProviderName }}": "Ga verder met {{ authProviderName }}",
@@ -1030,8 +1030,8 @@
   "Connect": "Verbinden",
   "Allow members to sign-in using their email address": "Sta leden toe om in te loggen met hun e-mailadres",
   "The server must have SMTP configured to enable this setting": "De server moet SMTP hebben geconfigureerd om deze instelling in te schakelen",
-  "Passkeys": "Passkeys",
-  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
+  "Passkeys": "Passkey's",
+  "Allow members to sign-in with a WebAuthn passkey": "Leden toestaan om in te loggen met een WebAuthn passkey",
   "Restrictions": "Beperkingen",
   "by {{ name }}": "door {{ name }}",
   "Expired": "Verlopen",
@@ -1241,7 +1241,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Vereist dat leden uitgenodigd worden voor de werkruimte voordat ze een account kunnen aanmaken met behulp van SSO.",
   "Default role": "Standaard rol",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "De standaard gebruikersrol voor nieuwe accounts. Het wijzigen van deze instelling heeft geen invloed op bestaande gebruikersaccounts.",
-  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
+  "Allow users to sign in with passkeys for passwordless authentication": "Gebruikers toestaan om in te loggen met passkey's voor wachtwoordloze authenticatie",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Wanneer ingeschakeld, kunnen documenten publiekelijk worden gedeeld op het internet door elk lid van de werkruimte",
   "Viewer document exports": "Bekijkers kunnen documenten exporteren",
   "When enabled, viewers can see download options for documents": "Wanneer ingeschakeld, kunnen kijkers downloadopties voor documenten zien",
@@ -1380,27 +1380,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Een ID dat de website uniek identificeert in jouw Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Oeps, je moet de machtigingen in Notion accepteren om {{ appName }} te verbinden met jouw werkruimte. Opnieuw proberen?",
   "Import pages from Notion": "Pagina's importeren uit Notion",
-  "Passkey options": "Passkey options",
-  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
-  "Passkey updated": "Passkey updated",
-  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
-  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
-  "Enter passkey name": "Enter passkey name",
-  "Failed to load passkeys": "Failed to load passkeys",
-  "Passkey added successfully": "Passkey added successfully",
-  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
-  "Rename passkey": "Rename passkey",
-  "Delete passkey": "Delete passkey",
-  "Passkey deleted successfully": "Passkey deleted successfully",
-  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
-  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
-  "Registering": "Registering",
-  "Add Passkey": "Add Passkey",
-  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
-  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
-  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
-  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
-  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
+  "Passkey options": "Passkey-opties",
+  "Registered {{ timeAgo }}": "Geregistreerd {{ timeAgo }}",
+  "Passkey updated": "Passkey bijgewerkt",
+  "Failed to update passkey. Please try again.": "Passkey bijwerken mislukt. Probeer het opnieuw.",
+  "Give your passkey a memorable name to easily identify it.": "Geef je passkey een gedenkwaardige naam om het gemakkelijk te identificeren.",
+  "Enter passkey name": "Voer een naam in voor de passkey",
+  "Failed to load passkeys": "Passkey's laden mislukt",
+  "Passkey added successfully": "Passkey met succes toegevoegd",
+  "Failed to register passkey. Please try again.": "Fout bij het registreren van passkey. Probeer het opnieuw.",
+  "Rename passkey": "Passkey hernoemen",
+  "Delete passkey": "Passkey verwijderen",
+  "Passkey deleted successfully": "Passkey met succes verwijderd",
+  "Failed to delete passkey. Please try again.": "Fout bij het verwijderen van passkey. Probeer het opnieuw.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Weet je zeker dat je deze passkey wilt verwijderen? Je kunt deze niet meer gebruiken om in te loggen.",
+  "Registering": "Registreren",
+  "Add Passkey": "Passkey toevoegen",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkey's laten je veilig aanmelden zonder een wachtwoord met behulp van de biometrische authenticatie van je apparaat (Face ID, Touch ID, Windows Hallo) of beveiligingssleutel.",
+  "Sign-in with Passkey is currently disabled for this team.": "Inloggen met Passkey is momenteel uitgeschakeld voor dit team.",
+  "Enable for all users in Settings -> Authentication.": "Inschakelen voor alle gebruikers in Instellingen -> Authenticatie.",
+  "Contact a workspace admin to enable it.": "Neem contact op met een werkruimte-admin om dit in te schakelen.",
+  "You don't have any passkeys yet.": "Je hebt nog geen passkey's.",
   "Add to Slack": "Voeg toe aan Slack",
   "document published": "document gepubliceerd",
   "document updated": "document bijgewerkt",
