fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -228,6 +228,7 @@
   "Couldn’t copy the document, try again?": "Kon het document niet verplaatsen. Probeer het nog een keer?",
   "Include nested documents": "Inclusief geneste documenten",
   "Copy to <em>{{ location }}</em>": "Verplaatsen naar <em>{{ location }}</em>",
+  "Copying": "Copying",
   "Search collections & documents": "Zoeken in collecties & documenten",
   "No results found": "Geen resultaten gevonden",
   "Document options": "Documentopties",
