--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -228,6 +228,7 @@
   "Couldn’t copy the document, try again?": "Couldn’t copy the document, try again?",
   "Include nested documents": "Include nested documents",
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
+  "Copying": "Copying",
   "Search collections & documents": "Telusuri koleksi & dokumen",
   "No results found": "Tak ditemukan hasil",
   "Document options": "Opsi dokumen",
