--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -524,6 +524,7 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
+  "Options": "Options",
   "More options": "More options",
   "Rename": "Rename",
   "Insert after": "Insert after",
