fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -114,7 +114,7 @@
   "Could not leave document": "Impossible de quitter le document",
   "Apply template": "Appliquer le modèle",
   "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "Upload emoji": "Télécharger un emogi",
   "Disconnect": "Se déconnecter",
   "Disconnect analytics": "Déconnecter les statistiques",
   "Home": "Accueil",
