select permission from notification

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -349,7 +349,11 @@
   "Sorry, an error occurred.": "Sorry, an error occurred.",
   "Click to retry": "Click to retry",
   "Back": "Back",
+  "Manage": "Manage",
+  "Permissions for {{ userName }} updated": "Permissions for {{ userName }} updated",
+  "Failed to approve access request": "Failed to approve access request",
   "Unknown": "Unknown",
+  "Approve": "Approve",
   "Mark all as read": "Mark all as read",
   "You're all caught up": "You're all caught up",
   "Client type": "Client type",
@@ -381,7 +385,6 @@
   "{{userName}} edited": "{{userName}} edited",
   "Results": "Results",
   "No results for {{query}}": "No results for {{query}}",
-  "Manage": "Manage",
   "All members": "All members",
   "Everyone in the workspace": "Everyone in the workspace",
   "{{ count }} member": "{{ count }} member",
@@ -423,7 +426,6 @@
   "Access inherited from collection": "Access inherited from collection",
   "{{ userName }} was removed from the document": "{{ userName }} was removed from the document",
   "Could not remove user": "Could not remove user",
-  "Permissions for {{ userName }} updated": "Permissions for {{ userName }} updated",
   "Could not update user": "Could not update user",
   "Has access through <2>parent</2>": "Has access through <2>parent</2>",
   "Suspended": "Suspended",
