Show upload progress for large/slow files

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Divider",
   "Image": "Image",
   "Sorry, an error occurred uploading the file": "Sorry, an error occurred uploading the file",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Write a caption",
   "Info": "Info",
   "Info notice": "Info notice",
