fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Séparateur",
   "Image": "Image",
   "Sorry, an error occurred uploading the file": "Désolé, une erreur s'est produite lors du chargement du fichier",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Ajoutez une légende",
   "Info": "Informations",
   "Info notice": "Avis d'information",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Choisissez une photo ou une image pour vous représenter.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Il peut s'agir de votre vrai nom ou d'un surnom - selon la façon dont vous aimeriez être désigné.",
   "Email address": "Adresse email",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Êtes-vous sûr de vouloir exiger des invitations ?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Les nouveaux utilisateurs devront être invités pour pouvoir créer un compte. Le <em>Rôle par défaut</em> et les <em>Domaines autorisés</em> ne s'appliqueront plus.",
   "Settings that impact the access, security, and content of your workspace.": "Paramètres agissant sur l'accès, la sécurité et le contenu de votre espace de travail.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Lorsque cette option est activée, les utilisateurs peuvent supprimer leur propre compte de l'espace de travail",
   "Rich service embeds": "Intégrations avancées",
   "Links to supported services are shown as rich embeds within your documents": "Les liens vers les services pris en charge sont affichés comme des intégrations avancées",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Création de collections",
   "Allow editors to create new collections within the workspace": "Autoriser les éditeurs à créer de nouvelles collections dans l'espace de travail",
   "Workspace creation": "Création d'un espace de travail",
