fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Divisor",
   "Image": "Imagen",
   "Sorry, an error occurred uploading the file": "Lo sentimos, ocurrió un error cargando el archivo",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Escribe un pie de foto",
   "Info": "Información",
   "Info notice": "Aviso de información",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Elige una foto o imagen para representarte.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Este podría ser tu nombre real, o un apodo — como te gustaría que la gente se refiriera a ti.",
   "Email address": "Correo electrónico",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "¿Estás seguro de que quieres requerir invitaciones?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Los nuevos usuarios primero tendrán que ser invitados para crear una cuenta. El <em>rol predeterminado</em> y los <em>dominios permitidos</em> ya no serán aplicables.",
   "Settings that impact the access, security, and content of your workspace.": "Configuraciones que impactan el acceso, seguridad y contenido de tu espacio de trabajo.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Cuando está habilitado, los usuarios pueden eliminar su propia cuenta del espacio de trabajo",
   "Rich service embeds": "Embeds de servicios enriquecidos",
   "Links to supported services are shown as rich embeds within your documents": "Los enlaces a los servicios soportados se muestran como embeds enriquecidos dentro de tus documentos",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Creación de colección",
   "Allow editors to create new collections within the workspace": "Permitir a los editores crear nuevas colecciones dentro del área de trabajo",
   "Workspace creation": "Creación de espacio de trabajo",
