fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Dělící čára",
   "Image": "Obrázek",
   "Sorry, an error occurred uploading the file": "Omlouváme se, při nahrávání souboru došlo k chybě",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Napsat popisek",
   "Info": "Informace",
   "Info notice": "Informační upozornění",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Vyberte si fotografii nebo obrázek, který vás bude reprezentovat.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Může to být vaše skutečné jméno nebo přezdívka – jakkoli chcete, aby vás lidé označovali.",
   "Email address": "E-mailová adresa",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Opravdu chcete vyžadovat pozvánky?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "K vytvoření účtu bude nutné nejprve pozvat nové uživatele. <em>Výchozí role</em> a <em>Povolené domény</em> již nebudou platit.",
   "Settings that impact the access, security, and content of your workspace.": "Nastavení ovlivňující přístup, bezpečnost a obsah vašeho pracovního prostoru.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "When enabled, users can delete their own account from the workspace",
   "Rich service embeds": "Bohaté vložené služby",
   "Links to supported services are shown as rich embeds within your documents": "Odkazy na podporované služby se ve vašich dokumentech zobrazují jako rozšířené vložení",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Vytvoření sbírky",
   "Allow editors to create new collections within the workspace": "Umožnit členům vytvářet v rámci pracoviště nové kolekce",
   "Workspace creation": "Vytvoření pracovního prostoru",
