fix: New Danish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Skillelinje",
   "Image": "Billede",
   "Sorry, an error occurred uploading the file": "Beklager, en fejl opstod under upload af filen",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Skriv en tekst",
   "Info": "Information",
   "Info notice": "Info-meddelelse",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Vælg et foto eller billede til at repræsentere dig selv.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Dette kunne være dit navn, eller en kaldenavn — hvordan end du gerne vil have andre til at henvise til dig.",
   "Email address": "E-mailadresse",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Er du sikker på, at du vil kræve invitationer?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nye brugere skal først inviteres til at oprette en konto. <em>Standard rolle</em> og <em>Tilladte domæner</em> vil ikke længere gælde.",
   "Settings that impact the access, security, and content of your workspace.": "Indstillinger, der påvirker adgang, sikkerhed og indhold i dit arbejdsområde.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Når aktiveret, kan brugere slette deres egen konto fra arbejdsområdet",
   "Rich service embeds": "Rig service indlejringer",
   "Links to supported services are shown as rich embeds within your documents": "Links til understøttede tjenester vises som rige indlejringer i dine dokumenter",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Oprettelse af samlinger",
   "Allow editors to create new collections within the workspace": "Tillad redaktører at oprette nye samlinger i arbejdsområdet",
   "Workspace creation": "Workspace creation",
