--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Trennlinie",
   "Image": "Bild",
   "Sorry, an error occurred uploading the file": "Beim Hochladen dieses Bildes ist ein Fehler aufgetreten",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Untertitel schreiben",
   "Info": "Info",
   "Info notice": "Info-Hinweis",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Wählen Sie ein Foto oder Bild, um sich selbst darzustellen.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Dies kann Ihr richtiger Name oder ein Spitzname sein — wie auch immer Sie durch andere Personen angesprochen werden möchten.",
   "Email address": "E-Mail Adresse",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Sind Sie sicher, dass Sie Einladungen voraussetzen möchten?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Neue Benutzer müssen zuerst eingeladen werden, um ein Konto zu erstellen. <em>Standardrolle</em> und <em>Erlaubte Domains</em> werden nicht mehr verwendet.",
   "Settings that impact the access, security, and content of your workspace.": "Einstellungen, die sich auf den Zugriff, die Sicherheit und den Inhalt Ihres Arbeitsbereichs auswirken.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Wenn aktiviert, können Benutzer ihr eigenes Konto aus dem Arbeitsbereich löschen",
   "Rich service embeds": "Rich-Service-Einbettungen",
   "Links to supported services are shown as rich embeds within your documents": "Links zu unterstützten Diensten werden als Rich Embeds in Ihren Dokumenten angezeigt",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Sammlungserstellung",
   "Allow editors to create new collections within the workspace": "Editoren erlauben neue Sammlungen im Arbeitsbereich zu erstellen",
   "Workspace creation": "Arbeitsbereich erstellen",
