fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Elválasztó",
   "Image": "Kép",
   "Sorry, an error occurred uploading the file": "Elnézést, valami hiba történt a fájl feltöltése közben",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Írjon egy elnevezést",
   "Info": "Infó",
   "Info notice": "Információs értesítés",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Az Önt ábrázoló fénykép vagy kép kiválasztása.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Ez lehet a valódi neve vagy egy becenév – ahogyan azt szeretné, hogy az emberek hivatkozzanak Önre.",
   "Email address": "E-mail cím",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Are you sure you want to require invites?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "When enabled, users can delete their own account from the workspace",
   "Rich service embeds": "Rich service embeds",
   "Links to supported services are shown as rich embeds within your documents": "Links to supported services are shown as rich embeds within your documents",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Gyűjtemény létrehozása",
   "Allow editors to create new collections within the workspace": "Allow editors to create new collections within the workspace",
   "Workspace creation": "Workspace creation",
