fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Divisore",
   "Image": "Immagine",
   "Sorry, an error occurred uploading the file": "Spiacenti, si è verificato un errore durante il caricamento del file",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Scrivi una descrizione",
   "Info": "Informazioni",
   "Info notice": "Nota informativa",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Scegli una foto o un'immagine che ti rappresenti.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Questo potrebbe essere il tuo vero nome, un soprannome o come preferisci essere chiamato.",
   "Email address": "Indirizzo email",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Sei sicuro di voler richiedere gli inviti?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "I nuovi utenti dovranno prima essere invitati a creare un account. Le opzioni <em>Ruolo predefinito</em> e <em>Domini consentiti</em> non saranno più applicabili.",
   "Settings that impact the access, security, and content of your workspace.": "Impostazioni che incidono sull'accesso, sulla sicurezza e sul contenuto dell'area di lavoro.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Se abilitato, gli utenti possono eliminare il proprio account dall'area di lavoro",
   "Rich service embeds": "Integrazioni di servizi avanzati",
   "Links to supported services are shown as rich embeds within your documents": "I link ai servizi supportati vengono incorporati all'interno dei tuoi documenti",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Creazione delle raccolte",
   "Allow editors to create new collections within the workspace": "Permetti agli editori di creare nuove collezioni nello spazio di lavoro",
   "Workspace creation": "Creazione spazio di lavoro",
