fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -570,6 +570,7 @@
   "Divider": "区切り線",
   "Image": "画像",
   "Sorry, an error occurred uploading the file": "ファイルのアップロード中にエラーが発生しました",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "脚注を書く",
   "Info": "情報",
   "Info notice": "アラート - INFO",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "あなたに関連した画像を選択してください",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "あなたとわかる名前にしましょう",
   "Email address": "メールアドレス",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "招待を要求してもよろしいですか？",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "新しいユーザーは、アカウントを作成するために招待される必要があります。 <em>デフォルトのロール</em> および <em>許可されたドメイン</em> は適用されなくなります。",
   "Settings that impact the access, security, and content of your workspace.": "ワークスペースのアクセス、セキュリティ、およびコンテンツに影響する設定。",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "有効にすると、ユーザーはワークスペースから自分のアカウントを削除できます。",
   "Rich service embeds": "リッチサービスの埋め込み",
   "Links to supported services are shown as rich embeds within your documents": "サポートされた URL は、ドキュメント内に埋め込みとして表示されます。",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "コレクションを作成",
   "Allow editors to create new collections within the workspace": "編集者がワークスペース内にコレクションを作成することを許可する",
   "Workspace creation": "ワークスペースの作成",
