--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -570,6 +570,7 @@
   "Divider": "구분선",
   "Image": "이미지",
   "Sorry, an error occurred uploading the file": "죄송합니다. 파일 업로드 중 에러가 발생했습니다",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "캡션 입력",
   "Info": "정보",
   "Info notice": "정보 공지",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "당신을 표현하는 사진이나 그림을 선택하세요.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "이것은 당신의 실명일 수도, 닉네임일 수도 있습니다 — 남들에게 어떻게 언급되고 싶나요?",
   "Email address": "이메일 주소",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "초대를 요구하시겠습니까?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "계정을 만들려면 먼저 새 사용자를 초대해야 합니다. <em>기본 역할</em> 및 <em>허용된 도메인</em> 은 더 이상 적용되지 않습니다.",
   "Settings that impact the access, security, and content of your workspace.": "접근, 보안, 워크스페이스 콘텐츠에 영향을 주는 설정입니다.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "활성화되면 사용자는 작업 공간에서 자신의 계정을 삭제할 수 있음",
   "Rich service embeds": "확장 임베딩",
   "Links to supported services are shown as rich embeds within your documents": "지원되는 서비스에 대한 링크는 문서 내에서 확장 임베딩으로 표시됩니다",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "컬렉션 생성됨",
   "Allow editors to create new collections within the workspace": "편집자가 워크스페이스에서 새 연결을 만들도록 허용",
   "Workspace creation": "워크스페이스 생성",
