--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Scheidingslijn",
   "Image": "Afbeelding",
   "Sorry, an error occurred uploading the file": "Sorry, er is een fout opgetreden bij het uploaden van het bestand",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Schrijf een onderschrift",
   "Info": "Info",
   "Info notice": "Informatie opmerking",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Kies een foto of afbeelding om jezelf weer te geven.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Dit kan je echte naam zijn, of een bijnaam — hoe je ook wilt dat personen naar je verwijzen.",
   "Email address": "E-mailadres",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Weet je zeker dat je deze uitnodiging wilt verwijderen?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nieuwe gebruikers moeten eerst worden uitgenodigd om een account aan te maken. <em>Standaard rol</em> en <em>Toegestane domeinen</em> zullen niet langer van toepassing zijn.",
   "Settings that impact the access, security, and content of your workspace.": "Instellingen die van invloed zijn op de toegang, beveiliging en inhoud van je werkruimte.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Wanneer ingeschakeld, kunnen gebruikers hun eigen account verwijderen uit de werkruimte",
   "Rich service embeds": "Rich service-embeds",
   "Links to supported services are shown as rich embeds within your documents": "Links naar ondersteunde diensten worden weergegeven als rich embeds in je documenten",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Collectie aanmaken",
   "Allow editors to create new collections within the workspace": "Redacteurs toestaan om nieuwe collecties te maken binnen de werkruimte",
   "Workspace creation": "Werkruimte aanmaken",
