fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Separator",
   "Image": "Obraz",
   "Sorry, an error occurred uploading the file": "Przepraszamy, wystąpił błąd podczas przesyłania pliku",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Napisz podpis",
   "Info": "Informacja",
   "Info notice": "Zawiadomienie informacyjne",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Wybierz zdjęcie lub obraz, który będzie Cię przedstawiał.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Może to być Twoje prawdziwe imię lub pseudonim — w jakikolwiek sposób chcesz, aby inni zwracali się do Ciebie.",
   "Email address": "Adres e-mail",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Czy na pewno chcesz wymagać zaproszeń?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nowi użytkownicy będą musieli najpierw zostać zaproszeni do utworzenia konta. <em>Domyślna rola</em> i <em>Dozwolone domeny</em> nie będą już obowiązywać.",
   "Settings that impact the access, security, and content of your workspace.": "Ustawienia wpływające na dostęp, bezpieczeństwo i zawartość twojego obszaru roboczego.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Gdy włączone, użytkownicy mogą usuwać własne konto z obszaru roboczego",
   "Rich service embeds": "Bogate osadzone usługi",
   "Links to supported services are shown as rich embeds within your documents": "Linki do obsługiwanych usług są wyświetlane jako bogate osadzenia w dokumentach",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Tworzenie kolekcji",
   "Allow editors to create new collections within the workspace": "Zezwalaj edytorom na tworzenie nowych kolekcji w obszarze roboczym",
   "Workspace creation": "Tworzenie obszaru roboczego",
