fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Separador",
   "Image": "Imagem",
   "Sorry, an error occurred uploading the file": "Ocorreu um erro ao criar a ligação",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Escreva uma legenda",
   "Info": "Informação",
   "Info notice": "Aviso de informação",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Escolha uma foto ou imagem que o represente.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Pode ser o seu nome real ou alcunha - como entender que outros utilizadores o tratem.",
   "Email address": "Endereço de e-mail",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Tem certeza que quer requisitar os convites?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Novos utilizadores terão de ser convidados para que criem conta. <em>Papel por defeito</em> e <em>domínios permitidos</em> não se aplicam.",
   "Settings that impact the access, security, and content of your workspace.": "Configurações que impactam acesso, segurança e conteúdo da sua área de trabalho.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "Quando ativo, utilizadores podem eliminar a sua própria conta da área de trabalho",
   "Rich service embeds": "Incorporação de serviços enriquecidos",
   "Links to supported services are shown as rich embeds within your documents": "Ligações para serviços suportados são vistos como serviços enriquecidos nos documentos",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Criação da coleção",
   "Allow editors to create new collections within the workspace": "Permitir que editores criar coleções na área de trabalho",
   "Workspace creation": "Criação de área de trabalho",
