--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -570,6 +570,7 @@
   "Divider": "Avdelare",
   "Image": "Bild",
   "Sorry, an error occurred uploading the file": "Ett fel inträffade vid uppladdningen",
+  "Uploading… {{ progress }}%": "Uploading… {{ progress }}%",
   "Write a caption": "Skriv en bildtext",
   "Info": "Info",
   "Info notice": "Infomeddelande",
@@ -1232,6 +1233,8 @@
   "Choose a photo or image to represent yourself.": "Välj ett foto eller en bild för att representera dig.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "Detta kan vara ditt riktiga namn, eller ett smeknamn — Hur du vill att folk skall se dig.",
   "Email address": "E-postadress",
+  "Members and guests": "Members and guests",
+  "No one": "No one",
   "Are you sure you want to require invites?": "Är du säker på att du vill kräva inbjudningar?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nya användare måste först bjudas in för att skapa ett konto. <em>Standardroll</em> och <em>Tillåtna domäner</em> kommer inte längre att gälla.",
   "Settings that impact the access, security, and content of your workspace.": "Inställningar som påverkar åtkomst, säkerhet och innehåll i din arbetsyta.",
@@ -1250,6 +1253,8 @@
   "When enabled, users can delete their own account from the workspace": "When enabled, users can delete their own account from the workspace",
   "Rich service embeds": "Rich service inbäddningar",
   "Links to supported services are shown as rich embeds within your documents": "Länkar till stödda tjänster visas som \" rich embeds\" i dina dokument",
+  "Email address visibility": "Email address visibility",
+  "Controls who can see user email addresses in the workspace": "Controls who can see user email addresses in the workspace",
   "Collection creation": "Skapande av samling",
   "Allow editors to create new collections within the workspace": "Tillåt redaktörer att skapa nya samlingar inom arbetsytan",
   "Workspace creation": "Skapande av arbetsyta",
